--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
       resultBox.innerHTML = `<div class='alert alert-success'>✅ বার্তাটি সন্দেহজনক মনে হচ্ছে না।</div>`;
     }
   }
+  <canvas id="phishingChart" width="400" height="200"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  const ctx = document.getElementById('phishingChart').getContext('2d');
+  const phishingChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['বিকাশ', 'OTP', 'PIN', 'সিম বন্ধ'],
+      datasets: [{
+        label: 'ফিশিং শব্দের সংখ্যা',
+        data: [12, 9, 7, 5], // উদাহরণ ডেটা
+        backgroundColor: 'rgba(255, 99, 132, 0.5)',
+        borderColor: 'rgba(255, 99, 132, 1)',
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: { beginAtZero: true }
+      }
+    }
+  });
 </script>
 
 </body>
