--- a/index.html
+++ b/index.html
@@ -2,108 +2,81 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BD-Telecom PhishGuard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body { background-color: #f5f7fa; }
-    .sidebar {
-      height: 100vh;
-      background-color: #ffffff;
-      border-right: 1px solid #ddd;
-      padding: 20px;
-    }
-    .sidebar h4 { margin-bottom: 30px; }
-    .sidebar a {
-      display: block;
-      margin-bottom: 15px;
-      color: #333;
-      text-decoration: none;
-    }
-    .content { padding: 30px; }
-    .report-box textarea {
-      width: 100%;
-      height: 100px;
-      margin-bottom: 15px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <link rel="preload" href="SolaimanLipi.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-3 sidebar">
-      <h4>📡 BD-Telecom PhishGuard</h4>
-      <a href="#">ড্যাশবোর্ড</a>
-      <a href="#">রিপোর্ট হিস্ট্রি</a>
-      <a href="#">সেটিংস</a>
-      <a href="#">হেল্প</a>
+  <header>
+    <h1>📡 বিডি-টেলিকম ফিশগার্ড</h1>
+    <p>টেলিকম-ভিত্তিক ফিশিং থেকে সুরক্ষা</p>
+  </header>
+
+  <section>
+    <h2>📈 ফিশিং রিপোর্ট সারাংশ (ডেমো)</h2>
+    <canvas id="phishingChart"></canvas>
+  </section>
+
+  <section>
+    <h2>📱 এসএমএস ভেরিফিকেশন (ডেমো)</h2>
+    <div class="input-group">
+      <label for="phone">ফোন নম্বর</label>
+      <input type="text" id="phone" placeholder="০১৭XXXXXXXX">
     </div>
-    <div class="col-md-9 content">
-      <h3>ফিশিং এসএমএস রিপোর্ট করুন</h3>
-      <div class="report-box">
-        <textarea id="smsInput" placeholder="এখানে সন্দেহজনক এসএমএস পেস্ট করুন..."></textarea>
-        <button class="btn btn-primary" onclick="analyzeSMS()">এসএমএস রিপোর্ট করুন</button>
-        <div id="result" class="mt-3"></div>
-      </div>
-      <hr>
-      <h4>ফিশিং প্রবণতা</h4>
-      <div class="bg-white p-3 rounded shadow-sm">
-        <p>এখানে গ্রাফ/চার্ট থাকবে (উদাহরণস্বরূপ)</p>
-      </div>
-      <hr>
-      <h4>সতর্কতা নোটিফিকেশন</h4>
-      <div class="alert alert-warning">
-        সন্দেহজনক লিঙ্ক শনাক্ত: http://example.com
-      </div>
+    <div class="input-group">
+      <label for="code">ভেরিফিকেশন কোড</label>
+      <input type="number" id="code" placeholder="৪-সংখ্যার কোড দিন">
     </div>
-  </div>
-</div>
+    <button onclick="sendSMS()">কোড পাঠান</button>
+    <button onclick="verifySMS()">ভেরিফাই করুন</button>
+    <div id="smsResult" class="success"></div>
+  </section>
 
-<script>
-  const phishingKeywords = ["বিকাশ", "OTP", "লটারি", "জিতেছেন", "PIN", "সিম বন্ধ", "টাকা পাঠান", "কল করুন"];
-
-  function analyzeSMS() {
-    const input = document.getElementById("smsInput").value;
-    let alertMsg = "";
-    let suspicious = false;
-
-    phishingKeywords.forEach(keyword => {
-      if (input.includes(keyword)) {
-        alertMsg += `<li>সন্দেহজনক শব্দ শনাক্ত: <strong>${keyword}</strong></li>`;
-        suspicious = true;
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    const ctx = document.getElementById('phishingChart').getContext('2d');
+    const chart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: ['২৪ মে', '২৫ মে', '২৬ মে', '২৭ মে', '২৮ মে'],
+        datasets: [{
+          label: 'ফিশিং প্রচেষ্টা',
+          data: [10, 15, 8, 20, 12],
+          borderColor: '#1e3a8a',
+          backgroundColor: 'rgba(30, 58, 138, 0.1)',
+          tension: 0.4,
+        }]
+      },
+      options: {
+        responsive: true,
+        plugins: {
+          legend: { display: true },
+          title: { display: true, text: 'ফিশিং প্রবণতা' }
+        }
       }
     });
 
-    const resultBox = document.getElementById("result");
-    if (suspicious) {
-      resultBox.innerHTML = `<div class='alert alert-danger'><ul>${alertMsg}</ul><strong>⚠ এটি একটি সম্ভাব্য ফিশিং বার্তা!</strong></div>`;
-    } else {
-      resultBox.innerHTML = `<div class='alert alert-success'>✅ বার্তাটি সন্দেহজনক মনে হচ্ছে না।</div>`;
+    function sendSMS() {
+      const phone = document.getElementById("phone").value;
+      if (!phone.match(/^01[3-9]\d{8}$/)) {
+        document.getElementById("smsResult").innerText = "❌ ভুল ফোন নম্বর।";
+        return;
+      }
+      const code = Math.floor(1000 + Math.random() * 9000);
+      localStorage.setItem("demoSMSCode", code);
+      document.getElementById("smsResult").innerText = `✅ কোড পাঠানো হয়েছে: ${code}`;
     }
-  }
-  <canvas id="phishingChart" width="400" height="200"></canvas>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  const ctx = document.getElementById('phishingChart').getContext('2d');
-  const phishingChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ['বিকাশ', 'OTP', 'PIN', 'সিম বন্ধ'],
-      datasets: [{
-        label: 'ফিশিং শব্দের সংখ্যা',
-        data: [12, 9, 7, 5], // উদাহরণ ডেটা
-        backgroundColor: 'rgba(255, 99, 132, 0.5)',
-        borderColor: 'rgba(255, 99, 132, 1)',
-        borderWidth: 1
-      }]
-    },
-    options: {
-      scales: {
-        y: { beginAtZero: true }
+
+    function verifySMS() {
+      const enteredCode = document.getElementById("code").value;
+      const savedCode = localStorage.getItem("demoSMSCode");
+      if (enteredCode === savedCode) {
+        document.getElementById("smsResult").innerText = "✅ সফলভাবে ভেরিফাই হয়েছে!";
+      } else {
+        document.getElementById("smsResult").innerText = "❌ ভুল কোড। আবার চেষ্টা করুন।";
       }
     }
-  });
-</script>
-
+  </script>
 </body>
 </html>
