--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>📡 বিডি-টেলিকম ফিশগার্ড</h1>
+    <h1>📡 BD-Telecom PhishGuard</h1>
     <p>টেলিকম-ভিত্তিক ফিশিং থেকে সুরক্ষা</p>
   </header>
 
